1. Further UX improvements. 2. Better colors for categories in seeder.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -189,6 +189,10 @@ input, textarea {
   border-radius: 0.25rem;
 }
 
+.font-larger {
+  font-size: larger;
+}
+
 // .Cookie* rules are for EU cookie info banner, using https://github.com/apertureless/vue-cookie-law
 .Cookie {
   justify-content: center !important;
